[package]
name = "nightcore-gui"
version = "0.1.0"
description = "Night Core Console"
authors = ["you"]
edition = "2021"

[lib]
name = "nightcore_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"] }

chrono = "0.4"
zip = "0.6"
tokio = { version = "1", features = ["process"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

which = "8"

hmac = "0.12"
sha2 = "0.10"
keyring = "2"
